--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bem-xjst": "bin/bem-xjst"
   },
   "scripts": {
-    "prepare": "npm run make",
+    "prepare": "echo ZZZZZZ && npm run make",
     "prepublish": "npm run make",
     "preversion": "bash scripts/update-authors.sh && git add AUTHORS && git commit -m \"update AUTHORS\" || true",
     "make": "npm run make:bemhtml && npm run make:bemtree",
